--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+  <h1 id="first">Search Your Github  Profile</h1>
+  
   <div class="container">
     <div class="btn-div">
       <input type="search">
@@ -22,7 +24,7 @@
 
       <div class="main">
         <div class="cart-top">
-          <div class="profile-img"></div>
+          <div class="profile-img"><img src="./images/image-victor.jpg" alt=""></div>
         </div>
         <div class="cart-bottom">
           <div class="desc">
@@ -32,6 +34,7 @@
 
             </div>
             <a class="link">View Profile</a>
+            <a class="link1">View Followings</a>
           </div>
 
           <div class="fans">
@@ -50,6 +53,44 @@
           </div>
         </div>
       </div>
+    </div>
+    <hr>
+    <div class="following">
+      <div class="contain">
+
+
+        <div class="main">
+          <div class="cart-top">
+            <div class="profile-img"></div>
+          </div>
+          <div class="cart-bottom">
+            <div class="desc">
+              <div class="desc-name">
+  
+                <p class="user-name">Victor Crest</p>
+  
+              </div>
+              <a class="link">View Profile</a>
+            </div>
+  
+            <div class="fans">
+              <div class="fans-div">
+                <p class="quantity">80K</p>
+                <p class="fan">Public Repos</p>
+              </div>
+              <div class="fans-div">
+                <p class="quantity">803K</p>
+                <p class="fan">Followwers</p>
+              </div>
+              <div class="fans-div">
+                <p class="quantity">1.4K</p>
+                <p class="fan">Followings</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     </div>
   </div>
   <script src="./app.js"></script>
