--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
   <div class="container">
     <div class="btn-div">
-      <input type="search">
+      <input type="search" placeholder="Write a username">
       <button>Search</button>
     </div>
     <div class="contain">
